package com.company.proxy;

public interface Proxy {
    void addPerson(String value, double x, double y);
}
